# archery

./: .ghci  .ghcid  .gitignore  .hlint.yaml  CHANGELOG.md  CollatzStepSpec.hs  README.md  TODO.md  archery.cabal  cabal.project  cabal.project.freeze  default-nix.nix  default.nix  shell-musl.nix  shell.nix
.github/workflows/: main.yml  main.yml.disabled  nix.yml.disabled
data/examples/jcat/: collatzStep.json  greetTuple.json  isPalindrome.json  reverseInput.json
data/examples/ycat/: collatzStep.yaml  greetTuple.yaml  isPalindrome.yaml  reverseInput.yaml
examples/lib/Control/Category/Primitive/: Person.hs
examples/lib/Data/: Person.hs
examples/lib/Data/Function/: Arrowy.hs  AskName.hs  CollatzStep.hs  Greet.hs  HelloWorld.hs  IsPalindrome.hs  Monadic.hs  Qualified.hs  ReverseInput.hs
examples/lib/Data/Primitive/: PrimPerson.hs
examples/test/Data/: PersonSpec.hs
examples/test/Data/Function/: ArrowySpec.hs  CollatzStepSpec.hs  GreetSpec.hs  IsPalindromeSpec.hs  ReverseInputSpec.hs
lib/: Orphans.hs
lib/Control/Category/: Apply.hs  Bracket.hs  Cartesian.hs  Choice.hs  Cocartesian.hs  Cochoice.hs  Costrong.hs  Curry.hs  Generic.hs  Interpret.hs  Numeric.hs  Strong.hs  Symmetric.hs
lib/Control/Category/Compile/: Imports.hs  Longhand.hs  Shorthand.hs
lib/Control/Category/Execute/Haskell/: Imports.hs  Longhand.hs  Shorthand.hs  WithDefinitions.hs  WithImports.hs  WithShorthand.hs
lib/Control/Category/Execute/JS/: Imports.hs  Longhand.hs  Shorthand.hs
lib/Control/Category/Execute/JSON/: Imports.hs  Longhand.hs  Shorthand.hs  WithDefinitions.hs  WithImports.hs  WithShorthand.hs
lib/Control/Category/Execute/Stdio/: Imports.hs  Longhand.hs  Shorthand.hs  WithDefinitions.hs  WithImports.hs  WithShorthand.hs
lib/Control/Category/LambdaCalculus/: BCKW.hs  SKI.hs
lib/Control/Category/Primitive/: Bool.hs  Console.hs  Curried.hs  Extra.hs  File.hs  Object.hs  String.hs
lib/Data/: MapSet.hs  Prims.hs  PrimsIO.hs
lib/Data/Aeson/: Compat.hs
lib/Data/Code/: Bash.hs  C.hs  CPP.hs  Generic.hs  Haskell.hs  JS.hs  PHP.hs  Python.hs  TS.hs
lib/Data/Code/Haskell/: Func.hs  Lamb.hs  Mock.hs  Program.hs
lib/Data/Code/JS/: Func.hs  Lamb.hs
lib/Data/Code/PHP/: Func.hs  Lamb.hs
lib/Data/Function/: Utilities.hs
lib/Data/Function/Free/: Abstract.hs
lib/Data/Primitive/: PrimExtra.hs  PrimsExtra.hs  PrimsFile.hs
lib/Data/Render/: File.hs  Statement.hs
lib/Data/Render/File/: Imports.hs  Longhand.hs  Shorthand.hs  WithDefinitions.hs  WithImports.hs  WithShorthand.hs
lib/Data/Render/Program/: Imports.hs  Longhand.hs  Shorthand.hs
lib/Data/Render/Statement/: Longhand.hs  Shorthand.hs  WithDefinitions.hs  WithLonghand.hs  WithShorthand.hs
lib/System/: Executable.hs
src/: generate-examples.hs  jcat2hs.hs  jcat2hsf.hs  jcat2hsfd.hs  jcat2hsfi.hs  jcat2hsfs.hs  jcat2hsl.hs  jcat2hsm.hs  jcat2hsp.hs  jcat2hssd.hs  jcat2hsss.hs  jcat2js.hs  jcat2jsfd.hs  jcat2jsfi.hs  jcat2jsfs.hs  jcat2jsl.hs  jcat2jsp.hs  jcat2jssd.hs  jcat2jsss.hs  jcat2php.hs  jcat2phpfd.hs  jcat2phpfi.hs  jcat2phpfs.hs  jcat2phpsd.hs  jcat2phpss.hs  jcat2ycat.hs  jcatc.hs  jcatcfd.hs  jcatcfi.hs  jcatcfs.hs  jcatcsd.hs  jcatcss.hs  runjcat.hs  runycat.hs  write-examples.hs  write-libraries.hs  ycat2hs.hs  ycat2hsf.hs  ycat2hsfd.hs  ycat2hsfi.hs  (+25 more)
test/Control/Category/: ApplySpec.hs  CartesianSpec.hs  ChoiceSpec.hs  CocartesianSpec.hs  CochoiceSpec.hs  CostrongSpec.hs  CurrySpec.hs  GenericSpec.hs  NumericSpec.hs  StrongSpec.hs  SymmetricSpec.hs
test/Control/Category/Primitive/: AbstractSpec.hs  BoolSpec.hs  CurriedSpec.hs  ExtraSpec.hs  FileSpec.hs  StringSpec.hs
test/Data/: PrimsIOSpec.hs  PrimsSpec.hs
test/Data/Code/: HaskellSpec.hs  JSSpec.hs  PHPSpec.hs
test/Data/Code/Haskell/: FuncSpec.hs  LambSpec.hs  MockSpec.hs  ProgramSpec.hs
test/Data/Code/JS/: FuncSpec.hs  LambSpec.hs
test/Data/Code/PHP/: LambSpec.hs
test/Data/Function/: GreetSpec.hs
test/Data/Function/Free/: AbstractSpec.hs
