cabal-version:       3.4
-- Newer versions complain
name:                archery
version:             0.1.0.0
-- synopsis:
description:         Playing with arrows 
homepage:            https://github.com/danwdart/archery#readme
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
extra-source-files:
                     README.md

common shared-properties-base
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, ImportQualifiedPost
  ghcjs-options:       -dedupe

common shared-properties-lib
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Werror
    -haddock
  build-depends:       base >= 4.17.0.0 && < 5
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
    NoGeneralizedNewtypeDeriving
    ImportQualifiedPost

common shared-properties-unsafe
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.17.0.0 && < 5
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
    NoGeneralizedNewtypeDeriving
    ImportQualifiedPost

common shared-properties-safe
  import: shared-properties-unsafe
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
    NoGeneralizedNewtypeDeriving
    ImportQualifiedPost
    Safe

common shared-properties-nobase
  import: shared-properties-base
  ghc-options:
    -Weverything
    -Wno-compat-unqualified-imports
    -Wno-implicit-prelude
    -Wno-inferred-safe-imports
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Werror
    -haddock
    -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
    DerivingStrategies
    UnicodeSyntax
    ImportQualifiedPost

-- TODO: unsafe?
library
  import: shared-properties-lib
  --ghc-options: -Wno-unused-packages
  hs-source-dirs:      lib
  build-depends: base >= 4.17.0.0 && < 5
               , aeson
               , bytestring
               , containers
               , process
               , text
               -- , yaml
  exposed-modules:
    Control.Category.Apply
    Control.Category.Bracket
    Control.Category.Cartesian
    Control.Category.Choice
    Control.Category.Cocartesian
    Control.Category.Cochoice
    Control.Category.Costrong
    Control.Category.Curry
    Control.Category.Execute.Haskell
    Control.Category.Execute.JSON
    Control.Category.Execute.Stdio
    -- Control.Category.Generic
    Control.Category.Interpret
    Control.Category.LambdaCalculus.BCKW
    Control.Category.LambdaCalculus.SKI
    Control.Category.Numeric
    Control.Category.Primitive.Bool
    Control.Category.Primitive.Console
    Control.Category.Primitive.Curried
    Control.Category.Primitive.Extra
    Control.Category.Primitive.File
    Control.Category.Primitive.JSON
    Control.Category.Primitive.Stdio
    Control.Category.Primitive.String
    Control.Category.Strong
    Control.Category.Symmetric
    Data.Aeson.Compat
    Data.Code.Haskell
    Data.Code.JS.Lamb
    Data.Code.JS.Func
    Data.Code.PHP.Lamb
    Data.Function.Free.LambdaCalculus.BCKW
    Data.Function.Free.LambdaCalculus.SKI
    Data.Function.Free.Abstract
    Data.Function.Utilities
    Data.Prims
    Data.Render.File.WithDefinitions
    Data.Render.File.WithImports
    Data.Render.Statement
    System.Executable

executable jcat2hs
  import: shared-properties-unsafe
  main-is:             jcat2hs.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring

executable jcat2jsl
  import: shared-properties-unsafe
  main-is:             jcat2jsl.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring

executable jcat2jsp
  import: shared-properties-unsafe
  main-is:             jcat2jsp.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring

executable jcat2php
  import: shared-properties-unsafe
  main-is:             jcat2php.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring

executable jcat2ycat
  import: shared-properties-unsafe
  main-is:             jcat2ycat.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring, yaml

executable jcatc
  import: shared-properties-unsafe
  main-is:             jcatc.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring

executable runjcat
  import: shared-properties-unsafe
  main-is:             runjcat.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring

executable runycat
  import: shared-properties-unsafe
  main-is:             runycat.hs
  build-depends:       base >= 4.17.0.0 && < 5, archery, bytestring, yaml

executable ycat2hs
  import: shared-properties-unsafe
  main-is:             ycat2hs.hs
  build-depends:       base >= 4.17.0.0 && < 5, archery, bytestring, yaml

executable ycat2jcat
  import: shared-properties-unsafe
  main-is:             ycat2jcat.hs
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring, yaml

executable ycat2js
  import: shared-properties-unsafe
  main-is:             ycat2js.hs
  build-depends:       base >= 4.17.0.0 && < 5, archery, bytestring, yaml

executable ycat2php
  import: shared-properties-unsafe
  main-is:             ycat2php.hs
  build-depends:       base >= 4.17.0.0 && < 5, archery, bytestring, yaml

executable ycatc
  import: shared-properties-unsafe
  main-is:             ycatc.hs
  build-depends:       base >= 4.17.0.0 && < 5, archery, bytestring, yaml

executable write-examples
  import: shared-properties-unsafe
  main-is:             write-examples.hs
  hs-source-dirs:      examples/lib, examples/test
  other-modules:       Data.Function.CollatzStep
                       Data.Function.Greet
                       Data.Function.IsPalindrome
                       Data.Function.ReverseInput
                       Data.Person
  build-depends:       base >= 4.17.0.0 && < 5, aeson, archery, bytestring, directory, yaml

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, NoGeneralizedNewtypeDeriving, ImportQualifiedPost
  build-depends:       base >= 4.17.0.0 && < 5
                     , aeson
                     , archery
                     , directory
                     , hspec
                     , QuickCheck
  other-modules:       Control.Category.ApplySpec
                       Control.Category.CartesianSpec
                       Control.Category.ChoiceSpec
                       Control.Category.CocartesianSpec
                       Control.Category.CochoiceSpec
                       Control.Category.CostrongSpec
                       Control.Category.CurrySpec
                       Control.Category.GenericSpec
                       Control.Category.NumericSpec
                       Control.Category.Primitive.BoolSpec
                       Control.Category.Primitive.CurriedSpec
                       Control.Category.Primitive.ExtraSpec
                       Control.Category.Primitive.FileSpec
                       Control.Category.Primitive.StringSpec
                       Control.Category.StrongSpec
                       Control.Category.SymmetricSpec
                       Data.Code.HaskellSpec
                       Data.Code.JS.LambSpec
                       Data.Code.JS.FuncSpec
                       Data.Code.PHP.LambSpec
                       Data.Function.Free.AbstractSpec
                       Data.PrimsSpec

test-suite test-examples
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples/lib, examples/test
  main-is:             Spec.hs
  default-language:    GHC2021
  default-extensions:  DerivingStrategies, UnicodeSyntax, NoGeneralizedNewtypeDeriving, ImportQualifiedPost
  build-depends:       base >= 4.17.0.0 && < 5
                     , aeson
                     , archery
                     , hspec
                     , QuickCheck
  other-modules:       Data.Function.CollatzStep
                       Data.Function.CollatzStepSpec
                       Data.Function.Greet
                       Data.Function.GreetSpec
                       Data.Function.IsPalindrome
                       Data.Function.IsPalindromeSpec
                       Data.Function.ReverseInput
                       Data.Function.ReverseInputSpec
                       Data.Person
                       Data.PersonSpec